Fix spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,10 @@ body {
     overflow: hidden;
 }
 
+button {
+    margin-right: .2rem;
+}
+
 #screen {
     font-size: 12px;
 }
